--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
-  - role: colstrom.apt-repository
+  - role: telusdigital.apt-repository
     repository_key: "0xb9316a7bc7917b12"
     repository_url: "deb http://ppa.launchpad.net/chris-lea/zeromq/ubuntu {{ ansible_distribution_release }} main"
 galaxy_info:
