Added check to confirm zeromq installation, I think.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,6 @@ script:
 
   # check idempotence
   - "ansible-playbook -i tests/inventory tests/$PLAYBOOK --connection=local --sudo"
+
+  # confirm zeromq installation
+  - "sudo service zeromq status"
