--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,11 +1,17 @@
 ---
 - name: Install Packages | apt
   apt:
-    state: latest
-    pkg: "{{ item }}"
-  with_items:
-    - libzmq3
-    - libzmq3-dev
-  tags:
-    - software-installation
-    - using-apt
+    state: latest
+    pkg: "{{ item }}"
+  with_items:
+    - libzmq3
+    - libzmq3-dev
+  when: ansible_distribution_release == 'trusty'
+
+- name: Install Packages | apt
+  apt:
+    state: latest
+    pkg: "{{ item }}"
+  with_items:
+    - libzmq5
+  when: ansible_distribution_release == 'xenial'
